--- a/core/Makefile
+++ b/core/Makefile
@@ -558,7 +558,7 @@ endif
 ifeq ($(INTERNAL_USERIMAGES_USE_EXT),true)
 INTERNAL_USERIMAGES_DEPS := $(MKEXTUSERIMG) $(MAKE_EXT4FS)
 else
-INTERNAL_USERIMAGES_DEPS := $(MKYAFFS2)
+INTERNAL_USERIMAGES_DEPS := $(MKYAFFS2) $(MKYAFFS2_ORIG)
 endif
 INTERNAL_USERIMAGES_BINARY_PATHS := $(sort $(dir $(INTERNAL_USERIMAGES_DEPS)))
 
